--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,8 +12,8 @@
 <h2>tu has visto esta vista <%= veces%></h2>
 
 <form method="post" action="/login">
-    <input type="text" name="username">
-    <input type="password" name="pass">
+    <label>Email: </label><input type="text" name="username"><br>
+    <label>Contraseña: </label><input type="password" name="pass"><br>
     <button type="submit">submit</button>
 </form>
 
