--- a/views/templates/nav.ejs
+++ b/views/templates/nav.ejs
@@ -1,7 +1,34 @@
-<a href="/">Home</a> |
-<% if (session == null) {%>
-    <a href="/login">Login</a> |
-    <a href="/registro">Registrar</a>
-<%} else {%>
-    <a href="/logout">Logout</a> |
-<%}%>
+
+<head>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+
+<link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
+</head>
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">IVR</a>
+      </div>
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="/">Home</a></li>
+          <% if (session == null) {%>
+            <li><a href="/login">Login</a></li>
+            <li><a href="/registro">Registrar</a></li>
+          <%} else {%>
+            <li><a href="/logout">Logout</a></li>
+          <%}%>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</div>
